# train-conductor

./: DEVELOPMENT.md  Dockerfile  Makefile  README.md  pyproject.toml  runtime_config.yml  tox.ini
deployment/: deployment-kind.yaml  deployment.yaml  runtime_configmap.yaml
interfaces/: trainconductor.proto
tests/: __init__.py  conftest.py  test_config.yml  test_grpc_server.py
tests/fixtures/: mock_k8s_client.py  mock_redis_client.py
train_conductor/: __init__.py  grpc_server.py  launch_training.py  training_servicer.py  types.py
train_conductor/datastore/: database_base.py  redis.py
train_conductor/interfaces/: __init__.py  database.py  trainconductor.proto  training_info.py
train_conductor/modules/: __init__.py  watcher.py
train_conductor/plugins/: redis.py
train_conductor/protobuf/: __init__.py  trainconductor_pb2.py  trainconductor_pb2.pyi  trainconductor_pb2_grpc.py
train_conductor/utils/: error_check.py  helpers.py
