[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "train-conductor"
# Not the actual current version: overwritten by CI
version = "0.0.1"
description = "Caikit K8s Backend"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.9"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "alchemy-config",
    "grpcio",
    "grpcio-reflection",
    "kubernetes",
    "redis"
]

[project.scripts]
grpc_server = "train_conductor.grpc_server:main"
