[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "train-conductor"
# Not the actual current version: overwritten by CI
version = "0.0.1"
description = "Caikit K8s Backend"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.9"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "alchemy-config",
    "grpcio",
    "grpcio-reflection",
    "kubernetes",
    "redis"
]

[project.scripts]
grpc_server = "train_conductor.grpc_server:main"


[project.optional-dependencies]

## Dev Extra Sets ##

dev-test = [
    "pytest-cov>=2.10.1,<5.0",
    "pytest-html>=3.1.1,<5.0",
    "pytest-mock>=3.11.1",
    "pytest>=6.2.5,<8.0",
    "grpcio-tools",
]

dev-fmt = [
    "ruff==0.1.14",
    "pre-commit>=3.0.4,<4.0",
    "pydeps>=1.12.12,<2",
]